[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://addons/vector_ai/scripts/direct_sidebar.gd" id="1_direct_sidebar"]

[node name="DirectSidebar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_direct_sidebar")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Vector AI"
vertical_alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Settings"

[node name="ClearButton" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "Clear"

[node name="ChatHistory" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputField" type="TextEdit" parent="VBoxContainer/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Type your message here..."
wrap_mode = 1
scroll_fit_content_height = true

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
layout_mode = 2
text = "Send"
